--- a/page5.html
+++ b/page5.html
@@ -1,1 +1,45 @@
-geese!!
+<!DOCTYPE HTML>
+<!--
+	Strata by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+<header id="header">
+</header>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+	<!-- <body class="is-preload"> -->
+
+		<!-- Header -->
+
+		<!-- Main -->
+			<div id="main">
+				<!-- One -->
+					<section id="one">
+						<ul class="actions">
+							<li><a href="index.html" class="button" style="color:black">HOME</a></li>
+							<li><a href="page2.html" class="button" style="color:black">CV</a></li>
+							<li><a href="page3.html" class="button" style="color:black">RESEARCH</a></li>
+							<li><a href="page4.html" class="button" style="color:black">OUTREACH</a></li>
+						</ul>
+						<header class="major">
+							<center><h1 style="color:black"><u>ABOUT ME</u><br />
+						</header>
+						<p style="color:black"> <i>Top: An image of Messier 67 (or NGC 2682) from SDSS. Bottom: An image from Sinha et al. 2024, where I derive the upper limit on chemical homogeneity within M67 across 20 elements. I found the clusterr to be chemically similar within of 0.05 dex, limited only by the resolution of the APOGEE spectra.</i></p>
+					</section>
+			</div>
+
+		<!-- Scripts -->
+			<!-- <script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script> -->
+
+	</body>
