--- a/page5.html
+++ b/page5.html
@@ -39,15 +39,15 @@
                         <header class="major">
 							<center><h1 style="color:orange"><u>A bit about me</u><br />
                         </header>
-                        
+
 						<p style="color:black"> Whenever I'm not doing research I'm usually disappearing somewhere into the woods or desert to go camping, backpacking, rafting, etc... with my girlfriend Sam and dog Kuiper (pictured below). My biggest not-like-other-girls trait in Utah is that I'm not a skiier or climber, instead I prefer doing weightlifting and I dabbled in longsword fighting for a bit. Outside of physical hobbies, I usually end up at home making various salsas, watching old movies (just watched The Mummy!), or writing historical fiction. </p>
+                        
                         <center><img src="images/outdoors_pic.png" width="400" height="400">
                         <br>
-                        <a style="color:black"> A sampling of my recent outdoor adventures! Featuring many pictures with my partner in it bc I'm good at taking pictures of her, and phenomenally bad at remembering to take pictures of myself.</a>
-                        <br>
+                        <p style="color:black"> A sampling of my recent outdoor adventures! Featuring many pictures with my partner in it bc I'm good at taking pictures of her, and phenomenally bad at remembering to take pictures of myself.</p>
                         <center><img src="images/kuiper.JPG" width="300" height="400">
                         <br>
-                        <a style="color:black"> And lastly my dog Kuiper!</a>
+                        <p style="color:black"> And lastly my corgi Kuiper!</p>
 					</section>
 			</div>
 
